# Pixel-Highway

./: CMakeLists.txt  README.md
include/: CarController.h  Game.h  GameOver.h  NpcCarController.h  Road.h  SceneryController.h  ScoreManager.h  SoundManager.h
src/: CarController.cpp  Game.cpp  GameOver.cpp  NpcCarController.cpp  Road.cpp  SceneryController.cpp  ScoreManager.cpp  SoundManager.cpp  main.cpp
